--- a/bibli.html
+++ b/bibli.html
@@ -78,11 +78,8 @@ and open the template in the editor.
         <div data-role="page" id="home" data-theme="a">
             <div data-role="header">
                 <div >
-                    <form action="search.php" method="post" data-ajax="false">
                         <input type="search" name="keyword" id="keyword"/>
-                        <input type="submit" name="submit" value="Search"/>
-                        <input type="button" id="btn_srh" name="btn_srh" value="Btn_Search"/>
-                    </form>
+                        <input type="button" id="btn_srh" name="btn_srh" value="Search"/>
                 </div>
 
                 <div>
